test/corpus/exprs.txt
==================
if_match_loop_block_record
==================
let eval(e: *expr): i32 = match *e with
  | Lit(n) -> n
  | Add { lhs; rhs } -> i32_add(eval(lhs), eval(rhs));

let p(): point = { x = 1; y = 2 };

let r(): i32 = { var a: i32 = 1; a };

let find_even(xs: *i32, n: i32): i32 =
  loop {
    var i: i32 = 0;
    if i32_equal(i, n) then { break(-1); } else { 0 };
    let v: i32 = 0;
    break(v);
  };
---

(source_file
  (let_decl
    name: (identifier)
    parameters: (parameters
      (param
        (identifier)
        (pointer_type
          type: (type_path
            (identifier)))))
    type: (type_path
      (identifier))
    value: (match_expression
      scrutinee: (unary_expression
        (identifier))
      pattern: (constructor_pattern
        (uidentifier)
        (identifier))
      body: (identifier)
      pattern: (constructor_pattern
        (uidentifier)
        (record_pattern
          (pat_field
            (identifier))
          (pat_field
            (identifier))))
      body: (call_expression
        function: (identifier)
        (call_expression
          function: (identifier)
          (identifier))
        (call_expression
          function: (identifier)
          (identifier)))))
  (let_decl
    name: (identifier)
    parameters: (parameters)
    type: (type_path
      (identifier))
    value: (record_literal
      (field_init
        (identifier)
        (literal
          (integer)))
      (field_init
        (identifier)
        (literal
          (integer)))))
  (let_decl
    name: (identifier)
    parameters: (parameters)
    type: (type_path
      (identifier))
    value: (block
      (statement
        (identifier)
        (type_path
          (identifier))
        (literal
          (integer)))
      (identifier)))
  (let_decl
    name: (identifier)
    parameters: (parameters
      (param
        (identifier)
        (pointer_type
          type: (type_path
            (identifier))))
      (param
        (identifier)
        (type_path
          (identifier))))
    type: (type_path
      (identifier))
    value: (loop_expression
      (block
        (statement
          (identifier)
          (type_path
            (identifier))
          (literal
            (integer)))
        (statement
          (if_expression
            (call_expression
              function: (identifier)
              (identifier)
              (identifier))
            (block
              (statement
                (break_stmt
                  (unary_expression
                    (literal
                      (integer))))))
            (block
              (literal
                (integer)))))
        (statement
          (identifier)
          (type_path
            (identifier))
          (literal
            (integer)))
        (statement
          (break_stmt
            (identifier)))))))
