test/corpus/operators.txt
==================
boolean_and_arith_precedence
==================
let f(a: bool, b: bool, c: bool): bool = !a && b || c;
let g(x: i32, y: i32, z: i32): i32 = x + y * z;
let h(x: i32, y: i32): bool = x == y;
---

(source_file
  (let_decl
    name: (identifier)
    parameters: (parameters
      (param
        (identifier)
        (type_path
          (identifier)))
      (param
        (identifier)
        (type_path
          (identifier)))
      (param
        (identifier)
        (type_path
          (identifier))))
    type: (type_path
      (identifier))
    value: (unary_expression
      (binary_expression
        (identifier)
        (binary_expression
          (identifier)
          (identifier)))))
  (let_decl
    name: (identifier)
    parameters: (parameters
      (param
        (identifier)
        (type_path
          (identifier)))
      (param
        (identifier)
        (type_path
          (identifier)))
      (param
        (identifier)
        (type_path
          (identifier))))
    type: (type_path
      (identifier))
    value: (binary_expression
      (binary_expression
        (identifier)
        (identifier))
      (identifier)))
  (let_decl
    name: (identifier)
    parameters: (parameters
      (param
        (identifier)
        (type_path
          (identifier)))
      (param
        (identifier)
        (type_path
          (identifier))))
    type: (type_path
      (identifier))
    value: (binary_expression
      (identifier)
      (identifier))))
