test/corpus/scoped_open_calls.txt
==================
scoped_open_operator_and_identifier_calls
==================
module Math = struct
  let (+)(a: i32, b: i32): i32 = i32_add(a, b);
end;

let a(): i32 = Math.(+)(1, 2);
let b(): i32 = Math.((+))(3, 4);
let c(): i32 = Math.(i32_add)(5, 6);
---

(source_file
  (module_decl
    (uidentifier)
    (module_expr
      (let_decl
        (operator_name
          (operator_identifier))
        (parameters
          (param
            (identifier)
            (type_path
              (identifier)))
          (param
            (identifier)
            (type_path
              (identifier))))
        (type_path
          (identifier))
        (call_expression
          (identifier)
          (identifier)
          (identifier)))))
  (let_decl
    (identifier)
    (parameters)
    (type_path
      (identifier))
    (call_expression
      (scoped_open_expression
        (module_path
          (uidentifier))
        (operator_identifier))
      (literal
        (integer))
      (literal
        (integer))))
  (let_decl
    (identifier)
    (parameters)
    (type_path
      (identifier))
    (call_expression
      (scoped_open_expression
        (module_path
          (uidentifier))
        (operator_name
          (operator_identifier)))
      (literal
        (integer))
      (literal
        (integer))))
  (let_decl
    (identifier)
    (parameters)
    (type_path
      (identifier))
    (call_expression
      (scoped_open_expression
        (module_path
          (uidentifier))
        (identifier))
      (literal
        (integer))
      (literal
        (integer)))))
